--- a/src/main/resources/assets/exampletnt/lang/en_us.json
+++ b/src/main/resources/assets/exampletnt/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.exampletnt.small_tnt": "Small TNT"
+  "item.exampletnt.small_tnt": "Small TNT",
+  "item.exampletnt.large_tnt": "Large TNT"
 }
